--- a/style.css
+++ b/style.css
@@ -13,3 +13,10 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+h1 {
+    font-size: var(--font-size-big);
+    color: #000;
+    background-color: #f00;
+    text-transform: uppercase;
+}
