--- a/style.css
+++ b/style.css
@@ -20,3 +20,10 @@ h1 {
     background-color: #f00;
     text-transform: uppercase;
 }
+
+h2 {
+    font-size: 30px;
+    color: #fff;
+    background-color: #000;
+    text-transform: capitalize;
+}
